2003-12-04  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.1

2003-12-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_op_start): Modified the code
	that closes the child's fds to use fcntl and also to start at fd =
	3 so as to get rid of the need to check for stdin/out/err.

	* gmime/gmime-filter-from.c (filter_filter): Fixed to malloc the
	correct buffer length.

2003-10-28  Pawel Salek  <pawsa@theochem.kth.se>

	* gmime.h.in: Use macros rather than the global variables to
	prevent compiler warnings.

	* gmime-error.h: Removed the trailing comma after the last enum
	value to fix ANSI compile warnings.

	* gmime-filter-basic.h: Same.

	* gmime-filter-best.h: Here too.

	* gmime-filter-crlf.h: And here.

	* gmime-filter-from.h: Same.

	* gmime-filter-yenc.h: Again here.

	* gmime-multipart-encrypted.h: And here.

	* gmime-multipart-signed.h: Here too.

	* gmime-stream-buffer.h: Same.

	* gmime-stream.h: And finally here.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added a check for altzone.

	* gmime/gmime-utils.c (parse_broken_date, parse_rfc822_date):
	Account for altzone if the system libc defines it.

2003-09-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-host-utils.c (g_gethostbyaddr_r): IPv6
	implementation rewritten to use getnameinfo() which is the proper
	function to use in this case.

	* gmime/internet-address.c (internet_address_list_length): Changed
	to take a const argument.
	(internet_address_to_string): Now takes a const InternetAddress.
	(internet_address_list_to_string): Now takes a const
	InternetAddressList.

2003-09-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream.c (g_mime_stream_read): If len == 0, return 0.
	(g_mime_stream_write): Same.

	* gmime/gmime-parser.c (parser_push_boundary): Fix the
	boundarylenfinal calculation. Thanks to Bart Visscher for catching
	this mistake.
