@@ -612,6 +612,7 @@ gpg_ctx_op_start (struct _GpgCtx *gpg)
 	char *status_fd = NULL, *passwd_fd = NULL;
 	int i, maxfd, errnosave, fds[10];
 	GPtrArray *argv;
+	int flags;
 	
 	for (i = 0; i < 10; i++)
 		fds[i] = -1;
@@ -671,13 +672,21 @@ gpg_ctx_op_start (struct _GpgCtx *gpg)
 	if (gpg->need_passwd) {
 		close (fds[8]);
 		gpg->passwd_fd = fds[9];
-		fcntl (gpg->passwd_fd, F_SETFL, O_NONBLOCK);
+		flags = (flags = fcntl (gpg->passwd_fd, F_GETFL)) == -1 ? O_WRONLY : flags;
+		fcntl (gpg->passwd_fd, F_SETFL, flags | O_NONBLOCK);
 	}
 	
-	fcntl (gpg->stdin_fd, F_SETFL, O_NONBLOCK);
-	fcntl (gpg->stdout_fd, F_SETFL, O_NONBLOCK);
-	fcntl (gpg->stderr_fd, F_SETFL, O_NONBLOCK);
-	fcntl (gpg->status_fd, F_SETFL, O_NONBLOCK);
+	flags = (flags = fcntl (gpg->stdin_fd, F_GETFL)) == -1 ? O_WRONLY : flags;
+	fcntl (gpg->stdin_fd, F_SETFL, flags | O_NONBLOCK);
+	
+	flags = (flags = fcntl (gpg->stdout_fd, F_GETFL)) == -1 ? O_RDONLY : flags;
+	fcntl (gpg->stdout_fd, F_SETFL, flags | O_NONBLOCK);
+	
+	flags = (flags = fcntl (gpg->stderr_fd, F_GETFL)) == -1 ? O_RDONLY : flags;
+	fcntl (gpg->stderr_fd, F_SETFL, flags | O_NONBLOCK);
+	
+	flags = (flags = fcntl (gpg->status_fd, F_GETFL)) == -1 ? O_RDONLY : flags;
+	fcntl (gpg->status_fd, F_SETFL, flags | O_NONBLOCK);
 	
 	return 0;
 	
