@@ -1,3 +1,10 @@
+2003-12-05  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-gpg-context.c (gpg_ctx_op_start): Properly set the
+	O_NONBLOCK flag on each of the pipes (ie. we need to get the
+	current flags first and then add the O_NONBLOCK flag rather than
+	just setting the O_NONBLOCK flag by itself).
+
 2003-12-04  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* README: Updated.
